--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,12 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
-<script src="js/jquery-1.9.0.js" type="text/javascript"></script>
-<script src="js/knockout-2.2.1.debug.js" type="text/javascript"></script>
+<script src="js/jquery/jquery.js" type="text/javascript"></script>
+<!--<script src="js/knockout-2.2.1.debug.js" type="text/javascript"></script>-->
+<script src="/socket.io/socket.io.js"></script>
+<script src="js/q.js"></script>
+<script src="js/socket.io-rpc.js"></script>
+
 <body>
 <div class="well">
     Hello world
@@ -17,34 +21,25 @@
 
 </body>
 
-<script type="text/javascript">
-    var viewModel = {
-        numberOfClicks : ko.observable(0),
-        connectWS : function() {
-            var previousCount = this.numberOfClicks();
-            this.numberOfClicks(previousCount + 1);
-            console.log("will connect to websocket");
 
-            var ws = new WebSocket("ws://localhost:8080/");
-            ws.onopen = function()
-            {
-                // Web Socket is connected, send data using send()
-                ws.send("uber important dem2cz Message");
-                console.log("Message is sent...");
-            };
-            ws.onmessage = function (evt)
-            {
-                var received_msg = evt.data;
-                console.log("Message is received: " + received_msg);
-            };
-            ws.onclose = function()
-            {
-                // websocket is closed.
-                console.log("Connection is closed...");
-            };
-        }
-    };
+<script>
+    var socket = io.connect('http://localhost/');
+    socket.on('news', function (data) {
+//        console.log(data);
+//        socket.emit('my event', { my: 'data' });
+    });
+    socket.on('disconnect', function () {
+        console.log("server disconnected");
+    });
+//    socket.emit('invocation', {});
 
-    ko.applyBindings(viewModel);
+    RPC.connect('http://localhost');
+    RPC.onChannelLoaded('test', function (test) {
+        test.getTime().then(function (date) {
+            console.log('time on server is: ' + date);
+
+        });
+        var str = test.myTest('hehe');
+    });
 </script>
 </html>
