--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <!--<script src="js/knockout-2.2.1.debug.js" type="text/javascript"></script>-->
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/q.js"></script>
-<script src="js/socket.io-rpc.js"></script>
+<script src="/rpc-client.js"></script>
 
 <body>
 <div class="well">
@@ -34,12 +34,12 @@
 //    socket.emit('invocation', {});
 
     RPC.connect('http://localhost');
-    RPC.onChannelLoaded('test', function (test) {
-        test.getTime().then(function (date) {
+    RPC.onChannelLoaded('myChannel', function (channel) {
+        channel.getTime().then(function (date) {
             console.log('time on server is: ' + date);
 
         });
-        var str = test.myTest('hehe');
+        var str = channel.myTest('hehe');
     });
 </script>
 </html>
