--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
 <script src="js/jquery/jquery.js" type="text/javascript"></script>
 <!--<script src="js/knockout-2.2.1.debug.js" type="text/javascript"></script>-->
 <script src="/socket.io/socket.io.js"></script>
-<script src="js/q.js"></script>
-<script src="/rpc-client.js"></script>
+<script src="/js/q.js"></script>
+<script src="/rpc/rpc-client.js"></script>
 
 <body>
 <div class="well">
     Hello world
-    <button data-bind="click: connectWS">
+    <button id="btn" data-bind="click: connectWS">
         test WS
     </button>
 </div>
@@ -34,12 +34,31 @@
 //    socket.emit('invocation', {});
 
     RPC.connect('http://localhost');
-    RPC.onChannelLoaded('myChannel', function (channel) {
-        channel.getTime().then(function (date) {
-            console.log('time on server is: ' + date);
+    RPC.loadChannel('myChannel', { query: "foo=fubar" }).then(
+        function (channel) {
+            channel.getTime().then(function (date) {
+                console.log('time on server is: ' + date);
 
-        });
-        var str = channel.myTest('hehe');
-    });
+            });
+            channel.myTest('passing string as argument').then(function(retVal){
+                console.log('server returned: ' + retVal);
+            });
+        }
+    );
+    RPC.expose('clientChannel', {
+        fnOnClient: function (param) {
+            return 'huluhulu ' + param;
+        }
+    }).then(
+        function (channel) {
+            console.log(" client channel ready");
+            $('#btn').click(function (e) {
+                console.log("button clicked, so sending my event");
+                socket.emit('my event');
+            });
+        }
+    );
+
+
 </script>
 </html>
